# bern52_auto

./: BERN52-CGS15.for  BERN52-CGS30.for  BERN52-OBS15.for  BERN52-OBS30-IGS.for  BERN52-OBS30-MACD.for  BERN52-OBS30.for  BERN52-STAR30.for  CGS52-15.for  CGS52-30.for  CH52-15.for  CH52-30.for  MACD-30.for  NLSC-15.for  NLSC-30-ADD.for  NLSC-30-IGS.for  NLSC-30.for  NLSC52-15.for  NLSC52.for  NTPU52-15.for  NTPU52-30.for  RDSINEX50.for  i686-w64-mingw32.txt  meson.build
