project('bern52_auto','fortran')
add_global_arguments('-cpp',language:'fortran')
add_global_arguments('-ffixed-line-length-none',language:'fortran')
executable('BERN52-CGS15','BERN52-CGS15.for')
executable('BERN52-CGS30','BERN52-CGS30.for')
executable('BERN52-OBS15','BERN52-OBS15.for')
executable('BERN52-OBS30','BERN52-OBS30.for')
executable('BERN52-OBS30-IGS','BERN52-OBS30-IGS.for')
executable('BERN52-OBS30-MACD','BERN52-OBS30-MACD.for')
executable('BERN52-STAR30','BERN52-STAR30.for')
executable('CGS52-15','CGS52-15.for')
executable('CGS52-30','CGS52-30.for')
executable('CH52-15','CH52-15.for')
executable('CH52-30','CH52-30.for')
executable('MACD-30','MACD-30.for')
executable('NLSC-15','NLSC-15.for')
executable('NLSC-30-ADD','NLSC-30-ADD.for')
executable('NLSC-30','NLSC-30.for')
executable('NLSC-30-IGS','NLSC-30-IGS.for')
executable('NLSC52-15','NLSC52-15.for')
executable('NLSC52','NLSC52.for')
executable('NTPU52-15','NTPU52-15.for')
executable('NTPU52-30','NTPU52-30.for')
executable('RDSINEX50','RDSINEX50.for')
